webkit text-decoration added to fix line-through and color on mobile

--- a/frontend/src/routes/Recipe.css
+++ b/frontend/src/routes/Recipe.css
@@ -26,6 +26,8 @@
 .ingredient-line-through__recipe {
     color: #595959;
     text-decoration: line-through #000000;
+    -webkit-text-decoration-line: line-through;
+    -webkit-text-decoration-color: #000000;
 }
 
 @media only screen and (min-width: 35rem){
